[package]
name = "esp32-flash-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
espflash = { version = "2.0.0-rc.4", git = "https://github.com/esp-rs/espflash.git", branch = "main", package = "espflash", features = [ "cli" ] }
tokio = { version = "1.28.1", features = ["full"] }
